Fixed x-axis overflow

--- a/ScrollAnimation/style.css
+++ b/ScrollAnimation/style.css
@@ -21,6 +21,7 @@ body {
 
   /* align the items towards the center vertically (even space on both sides) */
   align-items: center;
+  overflow-x: hidden;
 
   /* put items in the center of the flex display */
   justify-content: center;
